# docops-agent

./: .env.example  .gitignore  LICENSE  README.md  agents.md  logging_config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  routes.py
core/: agent_service.py  state.py
core/interfaces/: agent_runtime.py  retriever.py  state_store.py  task_tracker.py
core/tools/: __init__.py  search_tools.py  task_tools.py
docs/: agents.md  fastapi.md  rag.md
repositories/: chroma_retriever.py  in_memory_state.py  in_memory_tasks.py  langgraph_runtime.py  markdown_retriever.py
schemas/: chat.py
tests/: test_agent_api.py
