[tool.poetry]
name = "docops-agent"
version = "0.1.0"
description = "Stateful FastAPI AI agent with simple RAG and task tools"
authors = ["stas <stasdev25@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.0"
python-json-logger = "^3.3.0"
langgraph = "^1.0.10"
langchain-core = "^1.2.17"
langchain-ollama = "^1.0.1"
langchain-chroma = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
ruff = "^0.11.0"
mypy = "^1.15.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
